--- a/arch/arm/configs/su640_wind_defconfig
+++ b/arch/arm/configs/su640_wind_defconfig
@@ -810,9 +810,6 @@ CONFIG_CLEANCACHE=y
 # CONFIG_ARCH_MEMORY_REMOVE is not set
 # CONFIG_ARCH_POPULATES_NODE_MAP is not set
 # CONFIG_ENABLE_DMM is not set
-# CONFIG_FIX_MOVABLE_ZONE is not set
-# CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG is not set
-# CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
 CONFIG_ALLOW_CPU_ALIGNMENT=y
@@ -3354,9 +3351,9 @@ CONFIG_CRYPTO_LZO=y
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
-# CONFIG_CRYPTO_DEV_QCRYPTO is not set
-# CONFIG_CRYPTO_DEV_QCE is not set
-# CONFIG_CRYPTO_DEV_QCEDEV is not set
+CONFIG_CRYPTO_DEV_QCRYPTO=y
+CONFIG_CRYPTO_DEV_QCE=y
+CONFIG_CRYPTO_DEV_QCEDEV=m
 # CONFIG_CRYPTO_DEV_OTA_CRYPTO is not set
 CONFIG_BINARY_PRINTF=y
 
